# starops-best-practice

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md
docs/superpowers/plans/: 2026-03-19-cms-sdk-upgrade-6.2.1.md
docs/superpowers/specs/: 2026-03-19-cms-sdk-upgrade-6.2.1-design.md
requests/cms/: data_agent.json  entity.json  general_chat.json  metric_query.json  readme.md  sls_chat.json  sql_generation.json  user_ack_interactive.json
requests/starops/: data_agent.json  entity.json  general_chat.json  metric_query.json  readme.md  sls_chat.json  sql_generation.json  user_ack_interactive.json  user_input_interactive.json
samples/: .env.example  .gitignore  README.md  README_zh.md
samples/golang/: Makefile  README.md  README_zh.md  go.mod  go.sum  run-simple.sh
samples/golang/cmd/chat/: README.md  main.go
samples/golang/cmd/chat-from-file/: main.go
samples/golang/cmd/chat-interactive/: main.go
samples/golang/cmd/chat-with-time/: main.go
samples/golang/cmd/thread-manager/: main.go
samples/golang/internal/client/: chat_event_test.go  client.go  credentials.go  credentials_test.go  errors.go  errors_test.go  interactive.go  printer.go  retry.go  retry_test.go  simple_printer.go  simple_printer_test.go  thread.go  thread_test.go
samples/golang/internal/logger/: logger.go
samples/golang/pkg/client/: chat_event_test.go  client.go  credentials.go  credentials_test.go  errors.go  errors_test.go  interactive.go  printer.go  retry.go  (+5 more)
samples/golang/types/: events.go  inputs.go
samples/java/: .env.example  README.md  README_zh.md  pom.xml
samples/java8/: pom.xml
samples/python/: README.md  README_zh.md  pyproject.toml
samples/python/cms_sdk_samples/: __init__.py
samples/python/cms_sdk_samples/client/: __init__.py  agent_client.py  config.py  errors.py  interactive_handler.py  simple_printer.py
samples/python/cms_sdk_samples/examples/: __init__.py  chat.py  chat_from_file.py  chat_interactive.py  thread_manager.py
samples/python/cms_sdk_samples/logger/: __init__.py  logger.py
samples/python/cms_sdk_samples/types/: __init__.py  enums.py  events.py
samples/python/starops_sdk_samples/: __init__.py
samples/python/starops_sdk_samples/client/: __init__.py  agent_client.py  config.py  credentials.py  errors.py  event_printer.py  interactive_handler.py  retry.py  simple_printer.py
samples/python/starops_sdk_samples/examples/: __init__.py  chat.py  chat_from_file.py  thread_manager.py
samples/python/starops_sdk_samples/logger/: __init__.py  logger.py
samples/python/starops_sdk_samples/types/: __init__.py  enums.py  events.py
samples/python/tests/: __init__.py  test_chat_event.py  test_errors.py  test_retry.py  test_simple_printer.py
samples/sample-requests/: data_agent.json  entity.json  sls_chat.json  user_ack_interactive.json  user_input_interactive.json
samples/typescript/: .npmrc  README.md  README_zh.md  package-lock.json  package.json  tsconfig.json
samples/typescript/src/: index.ts
samples/typescript/tests/: chat-event.test.ts  errors.test.ts  retry.test.ts  simple-printer.test.ts
(+96 files in other folders)
